# deepslate-pipecat

./: .gitignore  README.md  pyproject.toml
build-src/: build.py
deepslate/pipecat/: __init__.py  options.py  service.py  utils.py
deepslate/pipecat/proto/: realtime.proto  realtime_pb2.py  realtime_pb2.pyi
examples/: .env.example  simple_bot.py
